test/expressions/if-expr/error-type-val.else.good
error-type-val.chpl:8: error: if-expression returns mixture of types and values
note: 'then' branch returns a value, but 'else' branch returns a type
